Ensure ViewTabMenu outline icons visible.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/viewbutton/ViewMenuPopup.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/viewbutton/ViewMenuPopup.less
@@ -67,4 +67,8 @@
   & > .key-box {
     top: 14px;
   }
+
+  & > .icon {
+    margin-right: 8px;
+  }
 }
